--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=mysql.mysql.database.azure.com
-DB_USER=tekhnologia
+DB_HOST=tekhnologia-mysql.mysql.database.azure.com
+DB_USER=tekhnologia@tekhnologia-mysql
 DB_PASSWORD=Royal@123
 DB_NAME=tpm
 PORT=3008
