--- a/package.json
+++ b/package.json
@@ -1,92 +1,38 @@
 {
-
   "name": "qpe_backend_code",
-
   "version": "1.0.0",
-
   "description": "",
-
   "main": "index.js",
-
   "type": "module",
-
   "scripts": {
-
     "start": "node ./src/index.js"
-
   },
-
   "dependencies": {
-
-    "aws": "^0.0.3-2",
-
     "axios": "^1.8.3",
-
     "bcrypt": "^5.1.1",
-
     "body": "^5.1.0",
-
     "body-parser": "^1.20.2",
-
     "cors": "^2.8.5",
-
-    "crypto": "^1.0.1",
-
     "crypto-js": "^4.2.0",
-
     "dotenv": "^16.4.7",
-
     "express": "^4.21.1",
-
     "express-session": "^1.18.0",
-
     "form-data": "^4.0.1",
-
-    "fs": "^0.0.1-security",
-
     "http-server": "^14.1.1",
-
     "jsonwebtoken": "^9.0.2",
-
     "moment": "^2.30.1",
-
     "multer": "^1.4.5-lts.1",
-
     "mysql": "^2.18.1",
-
     "mysql2": "^3.9.1",
-
     "nodemailer": "^6.9.15",
-
     "nodemon": "^3.1.0",
-
     "number-to-words": "^1.2.4",
-
-    "os": "^0.1.2",
-
     "passport": "^0.7.0",
-
     "passport-google-oauth2": "^0.2.0",
-
     "passport-google-oauth20": "^2.0.0",
-
-    "path": "^0.12.7",
-
     "razorpay": "^2.9.6",
-
-    "sdk": "^0.0.0",
-
-    "session": "^0.1.0",
-
     "twilio": "^5.5.0",
-
     "uuid": "^9.0.1",
-
-    "winston": "^3.11.0",
-
-    "zlib": "^1.0.5"
-
+    "winston": "^3.11.0"
   }
-
 }
-
