--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ DB_USER=tekhnologia
 DB_PASSWORD=Royal@123
 DB_NAME=tpm
 PORT=3000
+
+# ✅ Add these for JWT token generation
+JWT_SECRET=mySuperSecretKey123
+JWT_EXPIRY=1d
