--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=tekhnologia-mysql.mysql.database.azure.com
 DB_USER=tekhnologia
 DB_PASSWORD=Royal@123
-DB_NAME=tpm
+DB_NAME=tpm_cicd
 PORT=3000
 
 # ✅ Add these for JWT token generation
