--- a/.env
+++ b/.env
@@ -1,9 +1,40 @@
+
+
+# ✅ Add these for JWT token generation
+#JWT_SECRET=mySuperSecretKey123
+#JWT_EXPIRY=1d
+# Database configuration
 DB_HOST=tekhnologia-mysql.mysql.database.azure.com
 DB_USER=tekhnologia
 DB_PASSWORD=Royal@123
 DB_NAME=tpm_cicd
 PORT=3000
+DB_PORT=3306
 
-# ✅ Add these for JWT token generation
-JWT_SECRET=mySuperSecretKey123
-JWT_EXPIRY=1d
+
+# Application settings
+APP_ENV=development
+APP_PORT=3000
+ 
+
+# JWT secrets (if applicable)
+JWT_SECRET=tekhnologia
+JWT_EXPIRY=7d
+
+ 
+
+# SMTP credentials
+EMAIL_USER=user.tekhnologia@gmail.com       # email address 
+EMAIL_PASS=gvma okaw xahx urcx           # email password
+EMAIL_USER_Name =Tekhnologia_user
+ADMIN_EMAIL=head.tekhnologia@gmail.com    # email address
+
+
+
+EMAIL_PAYMENT_LINK='www.payment.link'
+
+
+# TPM Razorpay Test Mode keys
+key_id=rzp_test_SndciwOYtf1E7q
+key_secret=MtYedK4jynvTqV6fjBpCUrkx
+
