--- a/.env
+++ b/.env
@@ -1,40 +1,27 @@
+# ✅ Server Configuration
+PORT=3000
+APP_ENV=development
 
-
-# ✅ Add these for JWT token generation
-#JWT_SECRET=mySuperSecretKey123
-#JWT_EXPIRY=1d
-# Database configuration
+# ✅ MySQL Azure Database Configuration
 DB_HOST=tekhnologia-mysql.mysql.database.azure.com
-DB_USER=tekhnologia
+DB_PORT=3306
+DB_USER=tekhnologia@tekhnologia-mysql     # MUST include @server-name for Azure
 DB_PASSWORD=Royal@123
 DB_NAME=tpm_cicd
-PORT=3000
-DB_PORT=3306
 
-
-# Application settings
-APP_ENV=development
-APP_PORT=3000
- 
-
-# JWT secrets (if applicable)
+# ✅ JWT Configuration
 JWT_SECRET=tekhnologia
 JWT_EXPIRY=7d
 
- 
+# ✅ SMTP Email Configuration
+EMAIL_USER=user.tekhnologia@gmail.com
+EMAIL_PASS=gvmaokawxahxurcx               # No spaces
+EMAIL_USER_NAME=Tekhnologia_user
+ADMIN_EMAIL=head.tekhnologia@gmail.com
 
-# SMTP credentials
-EMAIL_USER=user.tekhnologia@gmail.com       # email address 
-EMAIL_PASS=gvma okaw xahx urcx           # email password
-EMAIL_USER_Name =Tekhnologia_user
-ADMIN_EMAIL=head.tekhnologia@gmail.com    # email address
+# ✅ Payment & Billing
+EMAIL_PAYMENT_LINK=https://www.payment.link
 
-
-
-EMAIL_PAYMENT_LINK='www.payment.link'
-
-
-# TPM Razorpay Test Mode keys
-key_id=rzp_test_SndciwOYtf1E7q
-key_secret=MtYedK4jynvTqV6fjBpCUrkx
-
+# ✅ Razorpay Test Credentials
+KEY_ID=rzp_test_SndciwOYtf1E7q
+KEY_SECRET=MtYedK4jynvTqV6fjBpCUrkx
